--- a/index.html
+++ b/index.html
@@ -12,41 +12,37 @@
     <script src="app.js"></script>
 </head>
 <body>
-    <template id="project">
-        <form>
-            <div class="form-control">
-                <label for="title">Title</label>
-                <input type="text" id="title" />
-            </div>
-            <div class="form-control">
-                <label for="description">Description</label>
-                <textarea id="description" rows="3"></textarea>
-            </div>
-            <div class="form-control">
-                <label for="people">People</label>
-                <input type="number" id="people" step="1" min="0" max="10" />
-            </div>
-            <button type="submit">ADD PROJECT</button>
-        </form>
-    </template>
     <template id="single">
         <li draggable="true">
-            <h2></h2>
-            <h3></h3>
-            <p></p>
+            <h2  class="title"></h2>
+            <h3 class="desc"></h3>
+            <p class="people"></p>
         </li>
     </template>
+    
+    <template id="single-responsive">
+        <li>
+            <input type="checkbox">
+            <h2 class="title"></h2>
+            <h3 class="desc"></h3>
+            <p class="people"></p>
+        </li>
+    </template>
+    
     <template id="list">
         <section class="projects">
             <header>
                 <h2></h2>
             </header>
-            <ul></ul>
-            <div>
-                <button id="div1"></button>
-                <br>
-                <button id="div2"></button>
+            <div class="container">
+                <ul></ul>
+                <div class="button">
+                    <button class="button1"></button>
+                    <br>
+                    <button class="button2"></button>
+                </div>
             </div>
+
         </section>
     </template>
     <div id="app"></div>
